--- a/nestjs-training/package.json
+++ b/nestjs-training/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "nest-js-api",
+  "name": "demo-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,49 +12,62 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "compose": "docker-compose up"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/mongoose": "^7.0.2",
-    "@nestjs/platform-express": "^7.0.0",
-    "bcrypt": "^5.0.0",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.25",
+    "@hapi/joi": "^17.1.0",
+    "@nestjs/common": "^6.7.2",
+    "@nestjs/config": "^0.0.9",
+    "@nestjs/core": "^6.7.2",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.1.1",
+    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.2.0",
+    "bcrypt": "^3.0.7",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "lodash": "^4.17.15",
+    "mailgun-js": "^0.22.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.8.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.5.3",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "^6.9.0",
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.7.1",
     "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
-    "@types/mongoose": "^5.7.32",
-    "@types/node": "^13.9.1",
+    "@types/express": "^4.17.1",
+    "@types/hapi__joi": "^16.0.12",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.149",
+    "@types/mailgun-js": "^0.22.3",
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.5.41",
+    "@types/node": "^12.7.5",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "26.0.1",
-    "prettier": "^1.19.1",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^6.1.1",
+    "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
