--- a/devops/digicode/devops/docker-compose.yaml
+++ b/devops/digicode/devops/docker-compose.yaml
@@ -3,10 +3,10 @@ services:
   jenkins:
     image: jenkins/jenkins:lts
     volumes:
-      - ./data/jenkins:/var/jenkins_home
+      - ../data/jenkins:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
-      - "8086:8080"
+      - 8086:8080
 
   portainer:
     image: portainer/portainer
@@ -19,26 +19,25 @@ services:
       - portainer_data:/data
 
   mysql:
+    env_file:
+      - ./env/mysql.env
     image: mysql:5.7
     restart: always
     command: --max_allowed_packet=32505856 --sql_mode=""
     ports:
       - 3317:3306
-    environment:
-      - MYSQL_ROOT_PASSWORD=root_password
-      - MYSQL_DATABASE=database
+    volumes:
+      - ../data/mysql:/var/lib/mysql
 
   phpmyadmin:
+    env_file:
+      - ./env/mysql.env
     depends_on:
       - mysql
     image: phpmyadmin/phpmyadmin
     restart: always
     ports:
-      - '8008:80'
-    environment:
-      PMA_HOST: mysql
-      MYSQL_USERNAME: root
-      MYSQL_ROOT_PASSWORD: root_password
+      - 8008:80
 
   registry:
     restart: always
@@ -47,28 +46,22 @@ services:
       - 5001:5000
     volumes:
       - ./configs/registry/config.yml:/etc/docker/registry/config.yml:ro
-      - ./data/registry:/var/lib/registry:rw
+      - ../data/registry:/var/lib/registry:rw
 
   gitserver:
+    env_file:
+      - ./env/gitserver.env
     image: gitea/gitea:1.14.1
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
-      - GITEA__database__TYPE=mysql
-      - GITEA__database__HOST=gitdb:3306
-      - GITEA__database__NAME=gitea
-      - GITEA__database__USER=gitea
-      - GITEA__database__PASSWD=gitea
     restart: always
     networks:
       - gitea
     volumes:
-      - ./gitea:/data
+      - ../data/gitea:/data
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     ports:
-      - "3001:3000"
-      - "222:22"
+      - 3001:3000
+      - 222:22
     depends_on:
       - gitdb
 
@@ -80,11 +73,9 @@ services:
     networks:
       - gitea
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ../data/gitdb:/var/lib/mysql
 
 networks:
-  backend:
-    external: false
   gitea:
     external: false
 
